--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /HTML.iml
+/.idea/uiDesigner.xml
+/.idea/runConfigurations.xml
+/.idea/modules.xml
+/.idea/misc.xml
+/.idea/jarRepositories.xml
+/.idea/compiler.xml
+/.idea/.gitignore
